# pydpeet

./: .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  index.html  pyproject.toml
.github/workflows/: github-ci-commit.yml  github-ci-merge.yml  github-ci-release-docs.yml  github-ci-release.yml
_static/: switcher.json
docs/: conf.py
latest/: Specifications.html  developer.html  genindex.html  index.html  installation.html  objects.inv  project_maintenance.html  py-modindex.html  search.html  searchindex.js
latest/_autosummary/: pydpeet.BatteryConfig.html  pydpeet.DataOutputFiletype.html  pydpeet.DeviceConfig.html  pydpeet.PrimitiveConfig.html  pydpeet.ReadConfig.html  pydpeet.SequenceOverviewConfig.html  pydpeet.SocMethod.html  pydpeet.VisualizationConfig.html  pydpeet.add_capacity.html  pydpeet.add_charge_throughput.html  pydpeet.add_cumulative_energy.html  pydpeet.add_efficiency_coulomb.html  pydpeet.add_equivalent_full_cycles.html  pydpeet.add_power.html  pydpeet.add_primitive_segments.html  pydpeet.add_resistance_internal.html  pydpeet.add_soc.html  pydpeet.add_soh.html  pydpeet.battery_config_wrapper.html  pydpeet.calculate_minimum_definitive_differences.html  pydpeet.convert.html  pydpeet.df_primitives_correction.html  pydpeet.extract_instructions.html  pydpeet.extract_ocv_dva_ica.html  pydpeet.extract_ocv_iocv.html  pydpeet.extract_sequence_overview.html  pydpeet.filter_and_split_df_by_blocks.html  pydpeet.filter_df.html  pydpeet.load_custom_module.html  pydpeet.merge_into_campaign.html  pydpeet.merge_into_series.html  pydpeet.primitive_config_wrapper.html  pydpeet.print_references.html  pydpeet.read.html  pydpeet.return_or_print_blocks.html  pydpeet.sequence_overview_config_wrapper.html  pydpeet.set_logging_style.html  pydpeet.split_df_by_blocks.html  pydpeet.visualization_config_wrapper.html  pydpeet.visualize_phases.html  (+2 more)
latest/_modules/: _frozen_importlib.html  _frozen_importlib_external.html  index.html
latest/_sources/: Specifications.md.txt  developer.md.txt  index.md.txt
latest/_static/: switcher.json
latest/api/: index.html
latest/examples/: index.html
latest/publications/: index.html
src/pydpeet/: __init__.py
test/api_accessible/: test_add_capacity.py  test_add_primitive_segments.py  test_add_resistance_internal.py  test_add_soc.py  test_convert.py  test_df_primitives_correction.py  test_extract_ocv_iocv.py  test_extract_sequence_overview.py  test_filter_and_split_df_by_blocks.py  test_generate_instructions.py  test_mapping.py  test_merge_into_series.py  test_read.py  test_visualize_phases.py
v0.3.1/: Specifications.html  developer.html  genindex.html  index.html  installation.html  objects.inv  project_maintenance.html  search.html  searchindex.js
v0.3.1/_autosummary/: pydpeet.BatteryConfig.html  pydpeet.SocMethod.html  pydpeet.add_capacity.html  pydpeet.add_primitive_segments.html  pydpeet.add_resistance_internal.html  pydpeet.add_soc.html  pydpeet.battery_config_default.html  pydpeet.convert.html  pydpeet.df_primitives_correction.html  (+14 more)
(+274 files in other folders)
