[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDPEET"
version = "0.3.1"
description = "Python package to read, unify, and convert battery measurement data from arbitrary battery cyclers to Parquet files. This package also provides functions to process, evaluate, and visualise the standardised data."
authors = [
    { name = "Anton Schlösser" },
    { name = "Martin Otto" },
    { name = "Alexander Günter Hinrichsen" },
    { name = "Jan Kalisch" },
    { name = "Daniel Schröder" },
    { name = "Cataldo De Simone" },
]

maintainers = [
    { name = "PyDPEET Team", email = "pydpeet@eet.tu-berlin.de" },
]

dependencies = [
    "pandas==3.0.3",
    "numpy==2.3.3",
    "pyarrow==19.0.1",
    "python-calamine>=0.3.1",
    "numba==0.64.0",
    "matplotlib==3.10.8",
    "scipy==1.17.1",
    "bibtexparser==1.4.4",
    "scikit-learn==1.8.0",
    "ipykernel>=7.2.0",
    "openpyxl>=3.1.5",
]
requires-python = ">=3.12"
readme = { file = "README.md", content-type = "text/markdown" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pre-commit",
]
docs = [
  "sphinx",
  "pydata-sphinx-theme",
  "myst-parser",
  "nbsphinx",
  "sphinx-copybutton",
  "bibtexparser",
  "sphinx-design>=0.7.0",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-rerunfailures",
]
mypy = [
    "mypy>=1.0",
    "types-python-dateutil",
    "types-six",
    "pre-commit",
]


[tool.ruff]
# Set line length limit to a slightly higher value
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E501: Ignore line length limit
# UP007: Ignore this, cause automated "fixes" causes mypy errors
#   foo: Union[int, str] = 1
#   Use instead:
#   foo: int | str = 1
ignore = ["E501", "UP007"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.format]
 # Use this option to keep lists and parameters lists as multi-line code when ended by a trailing comma
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
#https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
# Mypy will not try inferring the types of any 3rd party libraries
# you have installed unless they either have declared themselves to
# be PEP 561 compliant stub package (e.g. with a py.typed file) or have
# registered themselves on typeshed, the repository of types for the standard
# library and some 3rd party libraries.
ignore_missing_imports = true
exclude = [
    "tests/",
    "test/",
    "docs/",
    "benchmarks/",
    "_dev_utils/",
    "res/",
    ".*egg-info/",
]

# for local testing of test coverage
[tool.coverage.run]
source = ["src/pydpeet"]
omit = [
    "*/_dev_utils/*",
    "*/res/*",
]
